--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -13,6 +13,7 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
     private string notificationEmailAddresses;
     private integer errorCount;
     private string errorMessage;
+    private ID id;
 
     private vy_Coordinator coordinator;
     private vy_ScheduleItem scheduleItem;
@@ -40,7 +41,7 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
             fields.add ( 'Active__c' );
             fields.add ( 'Batch_Size__c' );
             fields.add ( 'Soql_Statement__c' );
-            fields.add ( 'Notification_Email_Addresses__c' );
+            fields.add ( 'Notification_Email__c' );
             fields.add ( 'Flow_Input_Variable_Name__c' );
 
             // build soql statement
@@ -54,13 +55,13 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
             } 
 
             // load values
+            this.id                             = (ID) formationRecords[0].get ( 'Id' );
             this.name                           = (string) formationRecords[0].get ( 'Id' );
             this.flowInterviewName              = (string) formationRecords[0].get ( 'Flow_Interview_Name__c' );
             this.batchSize                      = Integer.valueOf ( (decimal) formationRecords[0].get ( 'Batch_Size__c' ));
             this.soqlStatement                  = (string) formationRecords[0].get ( 'Soql_Statement__c' );
             this.notificationEmailAddresses     = (string) formationRecords[0].get ( 'Notification_Email__c' );
             this.flowInputVariableName          = (string) formationRecords[0].get ( 'Flow_Input_Variable_Name__c' );
-
             // TODO validate the formation
             this.isValid = true;
         } catch ( Exception e ) {
@@ -69,8 +70,17 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
         
     }
 
+    // check APEX Jobs to see if this is running
     public boolean isRunning () {
-        return true;
+        string currentStatus = this.getStatus ();
+        vy_Coordinator.debugOutput ('vy_Formation::isRunning', 'formation', this );
+        vy_Coordinator.debugOutput ('vy_Formation::isRunning', 'current status', currentStatus );
+        if ( currentStatus == 'Running' ) {
+            return true;
+        } else {
+            return false;
+        }
+        
     }
 
     public string getName () {
@@ -153,6 +163,15 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
         return 'vy_Formation';
     }
 
-   
+   // get status field
+   private string getStatus () {
+       string soql = 'SELECT Status__c FROM Vyuha_Formation__c WHERE ID = \'' + this.id + '\'';
+       List < sObject > results = Database.query ( soql );
+       if ( results.size () == 1 ) {
+           return (String) results[0].get ( 'Status__c' );
+       } else {
+           throw new vy_Exception ((vy_ExceptionParent) this, 'getStatus did not find an ID ' + this.id );
+       }
+   }
 
 }
