--- a/force-app/main/default/classes/vy_Exception.cls
+++ b/force-app/main/default/classes/vy_Exception.cls
@@ -22,4 +22,6 @@ public class vy_Exception extends Exception {
         vy_Coordinator.debugOutput ('vy_Exception', 'this', this );
     }
 
+    // TODO - better exception handling and get rid of the "className" thing
+
 }
