--- a/force-app/main/default/classes/vy_Signal_TEST.cls
+++ b/force-app/main/default/classes/vy_Signal_TEST.cls
@@ -3,7 +3,8 @@
 private class vy_Signal_TEST {
 
     @isTest
-    static void basic_create () {
+    static void basic_create_formation () {
+        vy_Formation mockFormation = vy_MockService.generateFormation ();
         vy_Signal sig = new vy_Signal ();
         sig.formationId = '123';
         sig.scheduleItemId = '123';
@@ -11,7 +12,7 @@ private class vy_Signal_TEST {
         sig.action = 'START';
         sig.status = 'SLEEP';
         sig.message = 'Test';
-        sig.initialize ();
+        sig.initialize ( mockFormation );
         system.assertEquals ( true, sig.isValid ());
     }
 
