adding EventHandler and connecting Actions and Status into core, also removing old Custom Metadata cruft

--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -78,7 +78,15 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
         } else {
             return false;
         }
-        
+    }
+
+    public boolean isRunnable () {
+        // return the inverse of isRunning
+        if ( this.isRunning () == false ) {
+            return true;
+        } else {
+            return false;
+        }
     }
 
     public string getName () {
@@ -144,6 +152,11 @@ public class vy_Formation implements vy_ProcessorItem, vy_ExceptionParent {
         // send email notifications
         //coordinator.sendNotificationEmail ( this );
 
+    }
+
+    // status control
+    public void setStatus ( vy_Signal.Vyuha_Status status ) {
+        
     }
 
     // logging
