--- a/force-app/main/default/classes/vy_ProcessorItem.cls
+++ b/force-app/main/default/classes/vy_ProcessorItem.cls
@@ -6,12 +6,16 @@ public interface vy_ProcessorItem {
     void load ( Id recordId );
     boolean isValid ();
     boolean isRunning ();
+    boolean isRunnable ();
 
     // processing methods
     void start ();
     string getSoqlStatement ();
     void execute ( List < sObject > dataList );
     void complete ();
+
+    // status methods
+    void setStatus ( vy_Signal.Vyuha_Status status );
 
     // logging and control
     void writeLog ( vy_Processor processor );
